--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,6 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Saying hi
-        run: |
-          echo "This is the first step of my first job."
-          echo $?
+        run: echo "This is the first step of my first job."
