--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,3 +8,6 @@ jobs:
     steps:
       - name: Saying hi
         run: echo "This is the first step of my first job."
+  
+      - name: Install something
+        run: apt install imagemagick
