--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,5 +9,14 @@ jobs:
       - name: Saying hi
         run: echo "This is the first step of my first job."
   
-      - name: Install something
-        run: sudo apt install imagemagick
+  test-python-3-10:
+    runs-on: ubuntu-latest
+    name: Check Python 3.10 on Ubuntu
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - run: python --version
