--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,22 +1,24 @@
-name: example
-
+name: Code Checks
 on: push
-
 jobs:
-  greeting:
+
+  test-python-versions:
+    name: Check Python ${{ matrix.python-version }} on Ubuntu
     runs-on: ubuntu-latest
-    steps:
-      - name: Saying hi
-        run: echo "This is the first step of my first job."
-  
-  test-python-3-10:
-    runs-on: ubuntu-latest
-    name: Check Python 3.10 on Ubuntu
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11"]
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v4
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: ${{ matrix.python-version }}
 
-      - run: python --version
+      - name: Install package
+        run: python -m pip install -e .[test]
+
+      - name: Test package
+        run: python -m pytest
+
