--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,10 +4,11 @@ jobs:
 
   test-python-versions:
     name: Check Python ${{ matrix.python-version }} on Ubuntu
-    runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.allow_failure }}
     strategy:
       fail-fast: false
       matrix:
+        runs-on: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.10", "3.11"]
         allow-failure: [false]
         include:
